--- a/implementation-workshop/Implementation.ipynb
+++ b/implementation-workshop/Implementation.ipynb
@@ -270,12 +270,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"Comment\": \"Full ML Pipeline\",\n",
+      "  \"StartAt\": \"Start Glue Job\",\n",
+      "  \"States\": {\n",
+      "    \"Start Glue Job\": {\n",
+      "      \"Type\": \"Task\",\n",
+      "      \"Resource\": \"arn:aws:states:::glue:startJobRun.sync\",\n",
+      "      \"Parameters\": {\n",
+      "        \"JobName\": \"etlandpipeline\"\n",
+      "      },\n",
+      "      \"Next\": \"Train model (XGBoost)\"\n",
+      "    },\n",
+      "    \"Train model (XGBoost)\": {\n",
+      "      \"Resource\": \"arn:aws:states:::sagemaker:createTrainingJob.sync\",\n",
+      "      \"Parameters\": {\n",
+      "        \"AlgorithmSpecification\": {\n",
+      "          \"TrainingImage\": \"811284229777.dkr.ecr.us-east-1.amazonaws.com/xgboost:latest\",\n",
+      "          \"TrainingInputMode\": \"File\"\n",
+      "        },\n",
+      "        \"OutputDataConfig\": {\n",
+      "          \"S3OutputPath\": \"s3://sagemaker-us-east-1-646862220717/models\"\n",
+      "        },\n",
+      "        \"StoppingCondition\": {\n",
+      "          \"MaxRuntimeInSeconds\": 86400\n",
+      "        },\n",
+      "        \"ResourceConfig\": {\n",
+      "          \"InstanceCount\": 1,\n",
+      "          \"InstanceType\": \"ml.m4.xlarge\",\n",
+      "          \"VolumeSizeInGB\": 30\n",
+      "        },\n",
+      "        \"RoleArn\": \"arn:aws:iam::646862220717:role/TeamRole\",\n",
+      "        \"InputDataConfig\": [\n",
+      "          {\n",
+      "            \"DataSource\": {\n",
+      "              \"S3DataSource\": {\n",
+      "                \"S3DataDistributionType\": \"ShardedByS3Key\",\n",
+      "                \"S3DataType\": \"S3Prefix\",\n",
+      "                \"S3Uri\": \"s3://sagemaker-us-east-1-646862220717/train/train.csv\"\n",
+      "              }\n",
+      "            },\n",
+      "            \"ChannelName\": \"train\",\n",
+      "            \"ContentType\": \"text/csv\"\n",
+      "          },\n",
+      "          {\n",
+      "            \"DataSource\": {\n",
+      "              \"S3DataSource\": {\n",
+      "                \"S3DataDistributionType\": \"ShardedByS3Key\",\n",
+      "                \"S3DataType\": \"S3Prefix\",\n",
+      "                \"S3Uri\": \"s3://sagemaker-us-east-1-646862220717/validation/validation.csv\"\n",
+      "              }\n",
+      "            },\n",
+      "            \"ChannelName\": \"validation\",\n",
+      "            \"ContentType\": \"text/csv\"\n",
+      "          }\n",
+      "        ],\n",
+      "        \"HyperParameters\": {\n",
+      "          \"objective\": \"reg:linear\",\n",
+      "          \"num_round\": \"100\",\n",
+      "          \"subsample\": \"0.7\",\n",
+      "          \"eval_metric\": \"mae\"\n",
+      "        },\n",
+      "        \"TrainingJobName.$\": \"$$.Execution.Name\"\n",
+      "      },\n",
+      "      \"Type\": \"Task\",\n",
+      "      \"Next\": \"Save Model\"\n",
+      "    },\n",
+      "    \"Save Model\": {\n",
+      "      \"Parameters\": {\n",
+      "        \"PrimaryContainer\": {\n",
+      "          \"Image\": \"811284229777.dkr.ecr.us-east-1.amazonaws.com/xgboost:latest\",\n",
+      "          \"Environment\": {},\n",
+      "          \"ModelDataUrl.$\": \"$.ModelArtifacts.S3ModelArtifacts\"\n",
+      "        },\n",
+      "        \"ExecutionRoleArn\": \"arn:aws:iam::646862220717:role/TeamRole\",\n",
+      "        \"ModelName.$\": \"$.TrainingJobName\"\n",
+      "      },\n",
+      "      \"Resource\": \"arn:aws:states:::sagemaker:createModel\",\n",
+      "      \"Type\": \"Task\",\n",
+      "      \"Next\": \"Batch transform\"\n",
+      "    },\n",
+      "    \"Batch transform\": {\n",
+      "      \"Type\": \"Task\",\n",
+      "      \"Resource\": \"arn:aws:states:::sagemaker:createTransformJob.sync\",\n",
+      "      \"Parameters\": {\n",
+      "        \"ModelName.$\": \"$$.Execution.Name\",\n",
+      "        \"TransformInput\": {\n",
+      "          \"CompressionType\": \"None\",\n",
+      "          \"ContentType\": \"text/csv\",\n",
+      "          \"DataSource\": {\n",
+      "            \"S3DataSource\": {\n",
+      "              \"S3DataType\": \"S3Prefix\",\n",
+      "              \"S3Uri\": \"s3://sagemaker-us-east-1-646862220717/to_predict.csv\"\n",
+      "            }\n",
+      "          }\n",
+      "        },\n",
+      "        \"TransformOutput\": {\n",
+      "          \"S3OutputPath\": \"s3://sagemaker-us-east-1-646862220717/predictions\"\n",
+      "        },\n",
+      "        \"TransformResources\": {\n",
+      "          \"InstanceCount\": 1,\n",
+      "          \"InstanceType\": \"ml.m4.xlarge\"\n",
+      "        },\n",
+      "        \"TransformJobName.$\": \"$$.Execution.Name\"\n",
+      "      },\n",
+      "      \"End\": true\n",
+      "    }\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "definition = open('step_function.json', 'r').read().replace('your_bucket',your_bucket).replace('your_role',your_role)\n",
     "print(definition)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the role that you previously created and then you can create and run your state machine. \n",
+    "\n",
+    "\n",
+    "As you process starts running and moves thorugh each step you will be able to see the process running in each servicés console. \n",
+    "\n",
+    "Check <a href='https://console.aws.amazon.com/glue/home?region=us-east-1#etl:tab=jobs'> Glue </a> for job logs and\n",
+    "<a href='https://console.aws.amazon.com/sagemaker/home?region=us-east-1#/jobs'> SageMaker </a> to see the training job, the model that you created and the batch transform process. \n",
+    "\n",
+    "After you step function finishes the execution, you should see the graph turning to green:\n",
+    "\n",
+    "<img src='img/step.png' style='width:500px' />\n",
+    "\n",
+    "You can inspect your predictions in the predictinos folder on you bucket checking <a href='https://s3.console.aws.amazon.com/s3/home?region=us-east-1'>S3</a>."
    ]
   }
  ],
